@@ -33,6 +33,8 @@
             });
 
             args.setPromise(p);
+
+            //Privacy link in charms->settings
             WinJS.Application.onsettings = function (e) {
                 e.detail.applicationcommands = {
                     "privacyFlyout": { href: "pages/privacy/privacy.html", title: "Privacy" }
@@ -43,7 +45,7 @@
     });
 
     app.oncheckpoint = function (args) {
-        // TODO: This application is about to be suspended. Save any state
+        // This application is about to be suspended. Save any state
         // that needs to persist across suspensions here. If you need to 
         // complete an asynchronous operation before your application is 
         // suspended, call args.setPromise().
