@@ -21,27 +21,35 @@
             </h1>
         </header>
         <section aria-label="Main content" role="main">
-            <h2>What Authenticator?</h2>
-            <p>Authenticator is a simple, open source application used for 2-step authentication on Windows 8 and Windows RT. 
-            2 step authentication is used by many popular websites, such as Google, Live, and Dropbox, to enable an extra layer of security.</p>
-            <h2>Why did Kurieus make this app?</h2>
-            <p>Though other TOTP authenticator apps are currently published to the Windows App Store, 
-            none of the other apps are released by developers with highly recognized and trusted names. 
-            Because of the nature of 2 step authentication, It was felt that erring on the side of caution 
-            would be best and to not use these apps. Authenticator is released to the public as a free 
-            and open source application. The source code can be viewed and examined by anyone at its 
-            GitHub repository. That repository is located here: 
-            <a href="https://github.com/mepis/Windows8OauthAuthenticator">https://github.com/mepis/Windows8OauthAuthenticator. </a></p>
-            <h2>How does Authenticator secure information?</h2>
-            <p>Authenticator saves all secret keys in the Windows Security Credentials Password Vault. 
-            More information of the Security Credentials Password Vault can be found here: 
-            <a href="http://windows.microsoft.com/en-us/windows7/what-is-credential-manager">http://windows.microsoft.com/en-us/windows7/what-is-credential-manager</a></p>
-            <h2>Privacy and Use Policy</h2>
-            <p>Though measures have been taken to secure information through mechanisms provided by Microsoft, no inherent guarantee of safety or privacy is offered. Use this application at your own risk. </p>
-            <p>Authenticator collects no personal information nor does it transmit information outside of this application other than mechanisms offered through secure storage of the Microsoft Credential Password Vault. </p>
-            <p>This application does contain clickable links to outside websites for information purposes only. Authenticator has no control over, nor does it partner with, any linked websites. Though these linked websites are generally considered safe by the community, proceed at your own risk.</p>
-            <h2>Help and Support</h2>
-            <p>For any help, questions, or comments, please email me at <a href="http://kurie.us/contact-me/">support@kurieus.us</a></p>
+            <div id="about">
+                <h2>What Authenticator?</h2>
+                <p>
+                    Authenticator is a simple, open source application used for 2-step authentication on Windows 8 and Windows RT.
+                    2 step authentication is used by many popular websites, such as Google, Live, and Dropbox, to enable an extra layer of security.
+                </p>
+                <h2>Why did Kurieus make this app?</h2>
+                <p>
+                    Though other TOTP authenticator apps are currently published to the Windows App Store,
+                    none of the other apps are released by developers with highly recognized and trusted names.
+                    Because of the nature of 2 step authentication, It was felt that erring on the side of caution
+                    would be best and to not use these apps. Authenticator is released to the public as a free
+                    and open source application. The source code can be viewed and examined by anyone at its
+                    GitHub repository. That repository is located here:
+                    <a href="https://github.com/mepis/Windows8OauthAuthenticator">https://github.com/mepis/Windows8OauthAuthenticator. </a>
+                </p>
+                <h2>How does Authenticator secure information?</h2>
+                <p>
+                    Authenticator saves all secret keys in the Windows Security Credentials Password Vault.
+                    More information of the Security Credentials Password Vault can be found here:
+                    <a href="http://windows.microsoft.com/en-us/windows7/what-is-credential-manager">http://windows.microsoft.com/en-us/windows7/what-is-credential-manager</a>
+                </p>
+                <h2>Privacy and Use Policy</h2>
+                <p>Though measures have been taken to secure information through mechanisms provided by Microsoft, no inherent guarantee of safety or privacy is offered. Use this application at your own risk. </p>
+                <p>Authenticator collects no personal information nor does it transmit information outside of this application other than mechanisms offered through secure storage of the Microsoft Credential Password Vault. </p>
+                <p>This application does contain clickable links to outside websites for information purposes only. Authenticator has no control over, nor does it partner with, any linked websites. Though these linked websites are generally considered safe by the community, proceed at your own risk.</p>
+                <h2>Help and Support</h2>
+                <p>For any help, questions, or comments, please email me at <a href="http://kurie.us/contact-me/">support@kurieus.us</a></p>
+            </div>
         </section>
     </div>
 </body>
